--- a/R/ITHIM.Rmd
+++ b/R/ITHIM.Rmd
@@ -344,10 +344,9 @@ facet_grid( Disease ~ ., scales = "free") +
 scale_y_continuous(breaks=seq(1, upper, 1), name="DALYs Averted Nationwide (Thousands)") +
 
 #geom_hline(yintercept=seq(1, upper, 1), col="white", lwd=1) +
-scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+")) +
-theme_tufte(base_size=12, ticks=T)
+scale_x_discrete(name="", labels = c("5-14","15-29","30-44","45-59","60-69","70-79","80+"))
+# + theme_tufte(base_size=12, ticks=T)
 #
-
 # + annotate("text", x = 3.5, y = 5, adj=1,  family="serif", label = c("Foo"))
 # + scale_y_continuous(name="DALYs Averted Nationwide (Thousands)") + facet_grid( Disease ~ State) + coord_flip() # + theme(axis.text.x  = element_text(angle=90, vjust=0.5, size=8))
 ```
