--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -60,11 +60,12 @@ Our findings show that the California and New York State have travel
 patterns that, if mirrored by the nation, would save the U.S. upwards
 of fifty thousand disability adjusted life years.
 
-\section{Availability:}
+%% \section{Availability:}
 
-\package{} may be explored using the user interface avaiable
-at \webpage{}.  The source code and data files for \package{} are
-publicly available on GitHub at \webpage{}.
+%% %% \package{} may be explored using the user interface avaiable
+%% %% at \webpage{}.
+%% The source code and data files for \package{} are publicly available
+%% on GitHub via a link on \webpage{}.
 
 \section{Supplementary information:}
 
@@ -180,8 +181,8 @@ Values for national disease-specific DALYs were found using the CDC
 Wonder database \cite{CDCWonder}.  California stood out among the
 estimates for national DALYs averted.  Most of the decrease in DALYs
 is due to prevention of dementia in the oldest age group, $80+$ years
-old.  California exhibits much greater walking means in this age group
-than the national average.  We also see prevention of depression and
+old.  California exhibits much greater walking and cycling means in this age group
+than the national average. In particular we see the cycling mean We also see prevention of depression and
 diabetes in the middle age groups due to increased active transport
 time.
 
